# ICP_SCHOLAR_DECENTRALIZED_EDUCTAION_PLATFORM

./: .env.example  Cargo.toml  README.md  dfx.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/course_canister/: course_canister.wasm  index.js  service.did.js
.dfx/local/canisters/peer_canister/: index.js  peer_canister.wasm
.dfx/local/canisters/student_canister/: index.js  student_canister.wasm
.dfx/local/lsp/: be2us-64aaa-aaaaa-qaabq-cai.did  bkyz2-fmaaa-aaaaa-qaaaq-cai.did  br5f7-7uaaa-aaaaa-qaaca-cai.did  bw4dl-smaaa-aaaaa-qaacq-cai.did
backend/course_canister/: Cargo.toml
backend/course_canister/src/: lib.rs
backend/peer_canister/: Cargo.toml
backend/peer_canister/src/: lib.rs
backend/student_canister/: Cargo.toml
backend/student_canister/src/: lib.rs
backend/token_canister/: Cargo.toml
backend/token_canister/src/: lib.rs
src/: App.tsx  main.tsx
src/components/: Layout.tsx
src/declarations/course_canister/: course_canister.did.d.ts  index.d.ts  index.js
src/declarations/peer_canister/: index.d.ts  index.js  peer_canister.did.d.ts  peer_canister.did.js
src/declarations/student_canister/: index.d.ts  index.js  student_canister.did.d.ts  student_canister.did.js
src/declarations/token_canister/: index.js
src/hooks/: useAuth.ts  useTokens.ts
src/pages/: CourseDetail.tsx  Courses.tsx  Dashboard.tsx  EducatorDashboard.tsx  Home.tsx  Login.tsx  PeerExchange.tsx
src/services/: agent.ts  globalStorage.ts  sharedStorage.ts
(+4 files in other folders)
