[package]
name = "student_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8"         # ⛳ most stable with ic-cdk 0.12
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.6"
ic-cdk-timers = "0.6"
